--- a/Infinity_2_0_0/Infinity_2_0_0/css/styles.css
+++ b/Infinity_2_0_0/Infinity_2_0_0/css/styles.css
@@ -79,11 +79,58 @@
 /* ------------------------------------------------------------------- 
  * ## fonts 
  * ------------------------------------------------------------------- */
-@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
+/* montserrat-300 - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 300;
+    src: url('./fonts/montserrat-v26-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* montserrat-regular - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/montserrat-v26-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* montserrat-500 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    src: url('./fonts/montserrat-v26-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* montserrat-700 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    src: url('./fonts/montserrat-v26-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* lora-regular - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Lora';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/lora-v35-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* lora-700 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Lora';
+    font-style: normal;
+    font-weight: 700;
+    src: url('./fonts/lora-v35-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
 
 :root {
     --font-1 : "Lora", serif;
-    --font-2 : "Inter", sans-serif;
+    --font-2 : "Montserrat", sans-serif;
 
     /* monospace
     */
@@ -2793,7 +2840,7 @@ img.u-pull-left {
 }
 
 .section-header--dark .lead {
-    color : rgba(255, 255, 255, 0.35);
+    color : rgba(255, 255, 255, 0.65);
 }
 
 .section-header--dark.has-bottom-sep::before {
@@ -2808,7 +2855,6 @@ img.u-pull-left {
     font-size      : var(--text-size);
     font-weight    : 600;
     color          : var(--color-black);
-    text-transform : uppercase;
     letter-spacing : .2em;
     margin-top     : 0;
     margin-bottom  : 0;
@@ -2976,7 +3022,7 @@ img.u-pull-left {
 .s-header__nav {
     z-index                    : 200;
     background                 : #0C0C0C;
-    color                      : rgba(255, 255, 255, 0.25);
+    color                      : var(--color-gray-10);
     font-family                : var(--font-2);
     font-size                  : 1.5rem;
     line-height                : 2.8rem;
@@ -2995,7 +3041,7 @@ img.u-pull-left {
 
 .s-header__nav a,
 .s-header__nav .text-highlight {
-    color : rgba(255, 255, 255, 0.5);
+    color : var(--color-gray-10);
 }
 
 .s-header__nav a:focus,
@@ -3224,33 +3270,11 @@ img.u-pull-left {
     --text-title-size : 10.4rem;
     --text-multiplier : 1;
     font-weight       : 700;
-    font-size         : calc(var(--text-title-size) * var(--text-multiplier));
+    font-size         : 5rem;
     line-height       : 1.1154;
-    color             : transparent;
+    color             : white;
     margin-top        : 0;
     margin-bottom     : var(--vspace-2_5);
-    text-transform: uppercase;
-    animation: wobble 100s infinite;
-    filter: hue-rotate(0deg);
-    transition: filter 0.5s ease-in-out;
-}
-
-.s-intro__title:hover {
-    filter: hue-rotate(10deg);
-}
-
-@keyframes wobble {
-    0% { transform: rotate(0deg) scale(1);}
-    10% { transform: rotate(.5deg);}
-    20% { transform: rotate(-.2deg);}
-    30% { transform: rotate(.1deg) scale(1.03);}
-    40% { transform: rotate(-.3deg);}
-    50% { transform: rotate(0deg);}
-    60% { transform: rotate(.4deg);}
-    70% { transform: rotate(-.2deg);}
-    80% { transform: rotate(.1deg) scale(.97);}
-    90% { transform: rotate(-.2deg);}
-    100% { transform: rotate(0deg) scale(1);}
 }
 
 .s-intro__more {
@@ -3441,16 +3465,7 @@ img.u-pull-left {
 
     background-color  : white;
     padding-top       : var(--vspace-2);
-    padding-bottom    : var(--vspace-6);
-}
-
-.s-about .text-pretitle::before {
-    content          : "";
-    display          : block;
-    background-color : var(--color-text-light);
-    width            : 2px;
-    height           : var(--vspace-3_5);
-    margin           : 0 auto var(--vspace-0_5);
+    padding-bottom    : var(--vspace-2);
 }
 
 .s-about__content {
@@ -3656,6 +3671,7 @@ img.u-pull-left {
     min-height : 800px;
     padding    : 0;
     position   : relative;
+    margin-bottom: 40px;
 }
 
 .s-portfolio__header {
@@ -3708,30 +3724,6 @@ img.u-pull-left {
     width            : 100%;
     height           : 100%;
     transition       : all, .5s;
-}
-
-.folio-item__thumb a::after {
-    z-index     : 1;
-    content     : "...";
-    text-align  : center;
-    font-family : var(--font-2);
-    font-weight : 300;
-    font-size   : 2.8rem;
-    color       : white;
-    display     : block;
-    height      : 3.2rem;
-    width       : 3.2rem;
-    line-height : 3.2rem;
-    margin-left : -1.6rem;
-    margin-top  : -3rem;
-    text-align  : center;
-    opacity     : 0;
-    visibility  : hidden;
-    transform   : scale(0.5);
-    transition  : all, 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
-    position    : absolute;
-    left        : 50%;
-    top         : 50%;
 }
 
 .folio-item__thumb img {
@@ -4378,6 +4370,34 @@ img.u-pull-left {
     background: black;
 }
 
+.first-info {
+    position: relative;
+}
+
+.clickme {
+    position: absolute;
+    top: 15px;
+    right: 12px;
+    width: 200px;
+    height: auto;
+}
+
+.s-intro__title {
+    font-size         : 5rem;
+    color             : white;
+    filter: hue-rotate(0deg);
+    transition: filter 0.5s ease-in-out;
+    text-transform: uppercase;
+}
+
+.s-intro__title img {
+    margin-bottom: 0;
+}
+
+.s-intro__title:hover {
+    filter: hue-rotate(10deg);
+}
+
 .s-intro__more {
     display: flex;
     flex-direction: column;
@@ -4474,7 +4494,28 @@ img.u-pull-left {
 }
 
 .folio-item__info {
-    padding: 1rem;
+    padding: 2rem 3rem;
+}
+
+.folio-item__cat {
+    color: white;
+    font-size: 3rem;
+    text-align: center;
+}
+
+.folio-item__btn {
+    display: block;
+    border-color: white;
+    width: fit-content;
+    margin: 20px auto;
+    color: white;
+    background: var(--color-gray-18);
+}
+
+.folio-item__title {
+    color: var(--color-gray-10);
+    font-size: 2rem;
+    padding: 2rem 0;
 }
 
 #portfolio .s-portfolio__header {
@@ -4482,4 +4523,27 @@ img.u-pull-left {
     background-size: cover;
     background-repeat: no-repeat;
 
+}
+
+.s-header__nav__top h3 {
+    margin-bottom: 0;
+}
+
+.s-header__nav__top h6 {
+    color: var(--color-gray-10);
+    margin: 0;
+}
+
+.s-header__btn {
+    border-color: white;
+}
+
+.s-header__nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.bold {
+    font-weight: 700;
 }
