--- a/Infinity_2_0_0/Infinity_2_0_0/css/styles.css
+++ b/Infinity_2_0_0/Infinity_2_0_0/css/styles.css
@@ -3839,6 +3839,7 @@ img.u-pull-left {
     opacity    : 1;
     visibility : visible;
     transform  : translateY(0);
+    min-width: 100%;
 }
 
 .folio-item:hover .folio-item__project-link {
@@ -4050,7 +4051,7 @@ img.u-pull-left {
 }
 
 .s-contact .section-header a {
-    color : var(--color-1);
+    color : var(--color-2);
 }
 
 /* ------------------------------------------------------------------- 
@@ -4374,6 +4375,14 @@ img.u-pull-left {
  *
  *
  * ------------------------------------------------------------------- */
+ a.link {
+    color: var(--color-2);
+    margin-top: 10px;
+}
+
+a.link:hover {
+    color: var(--color-1);
+}
 
  .summary {
     display: flex;
@@ -4392,10 +4401,14 @@ img.u-pull-left {
 
 .clickme {
     position: absolute;
-    top: 15px;
-    right: 12px;
+    top: -35px;
+    right: 0;
     width: 200px;
     height: auto;
+
+    @media (min-width: 600px) {
+        top: 15px;
+    }
 }
 
 .s-intro__title {
@@ -4501,15 +4514,6 @@ img.u-pull-left {
     text-align: left;
 }
 
-.map-address a.link {
-    color: var(--color-gray-10);
-    margin-top: 10px;
-}
-
-.map-address a.link:hover {
-    color: var(--color-1);
-}
-
 .map-info {
     font-size: 2.3rem;
     color: var(--color-gray-12);
@@ -4576,11 +4580,44 @@ img.u-pull-left {
     }
 }
 
-#portfolio .s-portfolio__header {
-    background: url(../images/space.png);
+.folio-item__thumb__cat {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: var(--color-1);
+    text-shadow: 3px 3px 0 var(--color-2);
+    font-size: 5.5rem;
+    z-index: 2;
+    transform: translate(-50%, -50%);
+    line-height: 1.2;
+    font-weight: 700;
+    text-align: center;
+}
+
+#anfahrt .s-portfolio__header {
+    position: relative;
+    z-index: 1;
+    background: url(../images/fores.png);
     background-size: cover;
     background-repeat: no-repeat;
+}
 
+#anfahrt .s-portfolio__header::before {
+    content: "";
+    z-index: 2;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .9);
+}
+
+#anfahrt .s-portfolio__header .row {
+    z-index: 3;
 }
 
 .s-header__nav__top h3 {
