--- a/Infinity_2_0_0/Infinity_2_0_0/css/styles.css
+++ b/Infinity_2_0_0/Infinity_2_0_0/css/styles.css
@@ -2823,18 +2823,6 @@ img.u-pull-left {
     position       : relative;
 }
 
-.section-header.has-bottom-sep::before {
-    content          : "";
-    display          : inline-block;
-    height           : 1px;
-    width            : 400px;
-    background-color : var(--color-border);
-    transform        : translateX(-50%);
-    position         : absolute;
-    bottom           : 0;
-    left             : 50%;
-}
-
 .section-header--dark .text-pretitle {
     color : var(--color-gray-12);
 }
@@ -3221,6 +3209,17 @@ img.u-pull-left {
     background-size     : cover;
 }
 
+.s-intro__video {
+    position : absolute;
+    top      : 50%;
+    left     : 50%;
+    width    : 180vw;
+    height   : auto;
+    z-index  : -1;
+    transform: translate(-50%, -50%);
+    max-width: unset;
+}
+
 .s-intro__bg::before {
     display        : block;
     content        : "";
@@ -3472,7 +3471,7 @@ img.u-pull-left {
     --text-desc-size  : 5.2rem;
     --text-multiplier : 1;
 
-    background-color  : white;
+    background  : linear-gradient(0deg, var(--color-1) 0%, var(--color-2)100%);
     padding-top       : var(--vspace-2);
     padding-bottom    : var(--vspace-2);
 }
@@ -4273,6 +4272,7 @@ img.u-pull-left {
  * ------------------------------------------------------------------- */
 .ss-copyright {
     padding-right : var(--vspace-2);
+    text-align: center;
 }
 
 .ss-copyright span {
@@ -4402,12 +4402,12 @@ a.link:hover {
 .clickme {
     position: absolute;
     top: -35px;
-    right: 0;
+    right: -25px;
     width: 200px;
     height: auto;
 
     @media (min-width: 600px) {
-        top: 15px;
+        display: none;
     }
 }
 
@@ -4462,7 +4462,7 @@ a.link:hover {
     padding-top: 2rem;
 }
 
-.anfahrt h2 {
+.anfahrt h2, .anfahrt h4 {
     color: white;
     margin-top: 0;
 }
@@ -4529,6 +4529,12 @@ a.link:hover {
     }
 }
 
+.folio-item:last-of-type {
+    @media (min-width: 600px) {
+        left: 50% !important;
+        transform: translateX(-50%) !important;
+    }
+}
 
 .folio-item__thumb {
     position: relative;
@@ -4537,14 +4543,13 @@ a.link:hover {
 }
 
 .folio-item__info {
-    padding: 1rem 1.5rem;
+    padding: 2rem 1.5rem 3rem;
     z-index: 3;
     background: rgba(0, 0, 0, .8);
 
     @media (min-width: 600px) {
         padding: 2rem 3rem;
     }
-
 }
 
 .folio-item__cat {
@@ -4555,7 +4560,6 @@ a.link:hover {
 
     @media (min-width: 600px) {
         font-size: 3rem;
-        padding: 
     }
 }
 
