--- a/Infinity_2_0_0/Infinity_2_0_0/css/styles.css
+++ b/Infinity_2_0_0/Infinity_2_0_0/css/styles.css
@@ -4011,7 +4011,7 @@ img.u-pull-left {
     --color-border      : rgba(255, 255, 255, .05);
 
     background-color    : var(--color-gray-19);
-    background-image    : url(../images/contact-bg.jpg);
+    background-image    : url(../images/fores.png);
     background-repeat   : no-repeat;
     background-position : center;
     background-size     : cover;
@@ -4020,20 +4020,9 @@ img.u-pull-left {
     position            : relative;
 }
 
-.s-contact h5 {
-    margin-top    : 0;
-    margin-bottom : var(--vspace-1);
-}
-
-.s-contact h5.with-top-line {
-    padding-top : var(--vspace-0_75);
-    border-top  : 1px solid var(--color-border);
-}
-
 .s-contact::before {
-    content        : "";
     display        : block;
-    background     : black;
+    content        : "";
     position       : absolute;
     top            : 0;
     left           : 0;
@@ -4041,8 +4030,19 @@ img.u-pull-left {
     bottom         : 0;
     width          : 100%;
     height         : 100%;
+    background     : black;
     pointer-events : none;
-    opacity        : .75;
+    opacity        : .9;
+    z-index: 2;
+}
+
+.s-contact .row {
+    z-index: 3;
+}
+
+.s-contact h5.with-top-line {
+    padding-top : var(--vspace-0_75);
+    border-top  : 1px solid var(--color-border);
 }
 
 .s-contact .section-header {
